S52968:small fixes for errors, positioning and clipping

--- a/roadmapplanningboard/RoadmapPlanningBoardApp.css
+++ b/roadmapplanningboard/RoadmapPlanningBoardApp.css
@@ -16,10 +16,10 @@
 
 .roadmapPlanningBoardApp .progress-bar-percent-done {
     color: white;
-    vertical-align: top;
+    vertical-align: middle;
     display: inline-block;
     position: absolute;
-    top: 8px;
+    top: 9px;
     right: 5%;
 }
 
@@ -745,7 +745,7 @@
     font-weight: 400;
     text-align: center;
     padding-bottom: 10px;
-    padding-top: 0px;
+    padding-top: 2px;
     margin-top: -3px;
 }
 
@@ -755,14 +755,14 @@
     width: 37px;
 }
 
-.roadmap-planning-popover .x4-form-invalid-field {
+.roadmap-planning-popover .x-form-invalid-field {
     background-color: #F2D3D0;
     border-color: #B81B10;
     border-width: 1px;
     border-style: solid;
 }
 
-.roadmap-planning-popover .x4-form-error-msg {
+.roadmap-planning-popover .x-form-error-msg {
     padding: 5px;
     color: white;
     background-color: #B81B10;
